--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,4 +1,4 @@
-<html <!DOCTYPE html>
+ <!DOCTYPE html>
 
 <html>
     <head>
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="styleshee" href="style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <h1>Mon Blog</h1>
@@ -18,7 +18,7 @@
             <div class="card">
               <img class="card-img-top" src="/images/cat.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="card-footer">
@@ -28,7 +28,7 @@
             <div class="card">
               <img class="card-img-top" src="/images/cat.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h4 class="card-title">Card title</h4>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
               <div class="card-footer">
@@ -38,7 +38,7 @@
             <div class="card">
               <img class="card-img-top" src="/images/cat.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
               </div>
               <div class="card-footer">
